--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/google-apps-script": "^1.0.97",
     "@types/gulp": "^4.0.17",
-    "gulp": "^5.0.1"
+    "gulp": "^5.0.1",
+    "jest": "^30.0.4"
   }
 }
