fix schema settings...maybe?

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "json.schemas": [
     {
       "fileMatch": [
-        "**/*/appscript.json"
+        "**/appscript.json"
       ],
       "url": "https://json.schemastore.org/appsscript.json"
     }
