--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
   "cSpell.ignorePaths": [
     "package-lock.json",
     "package.json",
-    "src/appscript.json",
+    "src/appsscript.json",
     "project",
     "node_modules",
     "vscode-extension",
